Update config and test data, improve packaging
Refined .npmignore to exclude more files and added README.md and LICENSE to package.json files list. Updated test data in use.js and its source map. Cleaned up tsconfig.json with clearer options and added 'include' for src directory.

--- a/.npmignore
+++ b/.npmignore
@@ -1,9 +1,10 @@
 src/
 test/
-*.ts
-*.test.ts
-tsconfig.json
-vitest.config.ts
-.vscode/
-node_modules/
 .idea/
+.git/
+.gitignore
+.npmignore
+tsconfig.json
+.vscode/
+*.log
+*.map
